fix: fix issue with rows covering each other
Improve CSS and fix issue regarding rows covering each other.

closes #12

--- a/src/App.css
+++ b/src/App.css
@@ -33,10 +33,6 @@ body {
   font-size: 1.5em;
 }
 
-.App-body {
-  margin-top: 1em;
-}
-
 @keyframes App-logo-spin {
   from { transform: rotate(-30deg); }
   to { transform: rotate(30deg); }
